create servicies section

--- a/public/index.html
+++ b/public/index.html
@@ -82,7 +82,7 @@
         </ul>
       </nav>
     </header>
-    <section class="container mx-auto md:flex pb-48">
+    <section class="container mx-auto md:flex pb-36 md:pb-48">
       <div class="left-side">
         <div>
           <h1
@@ -111,7 +111,7 @@
       </div>
     </section>
     <div class="bg-[#f3fbff]">
-      <section class="container mx-auto pt-28">
+      <section class="container mx-auto pt-24 md:pt-28 pb-[88px]">
         <div class="text-center">
           <h2 class="text-[#462E6A] font-bold text-[45px] leading-[124%] pb-9">
             Services we Offer
@@ -122,6 +122,117 @@
             Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget
             dolor. Aenean massa.
           </p>
+        </div>
+        <div
+          class="flex flex-col md:flex-row md:flex-wrap md:justify-between items-center md:pb-[70px]"
+        >
+          <div
+            class="flex flex-col items-center w-[375px] h-[354px] rounded-[20px] bg-[#fff] p-14 shadow-[rgba(7,_65,_210,_0.1)_0px_9px_30px] hover:shadow-[0_35px_60px_-15px_rgba(0,0,0,0.3)] md:transition-all mb-6 md:md-5 cursor-pointer"
+          >
+            <img
+              src="./img/search-doctor.svg"
+              width="98"
+              height="90"
+              alt="Search doctor icon"
+              class="pb-5"
+            />
+            <h3 class="font-bold text-2xl text-center text-[#000] leading-[233%]">Search doctor</h3>
+            <span class="text-[16px] leading-[175%] text-[#7d7987] max-w-64"
+              >Choose your doctor from <br />
+              thousands of specialist, general, <br />
+              and trusted hospitals</span
+            >
+          </div>
+          <div
+            class="flex flex-col items-center w-[375px] h-[354px] rounded-[20px] bg-[#fff] p-14 shadow-[rgba(7,_65,_210,_0.1)_0px_9px_30px] hover:shadow-[0_35px_60px_-15px_rgba(0,0,0,0.3)] md:transition-all mb-6 md:mb-5 cursor-pointer"
+          >
+            <img
+              src="./img/pharmacy.svg"
+              width="69"
+              height="85"
+              alt="Search doctor icon"
+              class="pb-5"
+            />
+            <h3 class="font-bold text-2xl text-center text-[#000] leading-[233%]">
+              Online pharmacy
+            </h3>
+            <span class="text-[16px] leading-[175%] text-[#7d7987] max-w-64"
+              >Buy your medicines with our <br />
+              mobile application with a simple <br />
+              delivery system</span
+            >
+          </div>
+          <div
+            class="flex flex-col items-center w-[375px] h-[354px] rounded-[20px] bg-[#fff] p-14 shadow-[rgba(7,_65,_210,_0.1)_0px_9px_30px] hover:shadow-[0_35px_60px_-15px_rgba(0,0,0,0.3)] md:transition-all mb-6 md:mb-5 cursor-pointer"
+          >
+            <img
+              src="./img/consulltating.svg"
+              width="61"
+              height="95"
+              alt="Search doctor icon"
+              class="pb-5"
+            />
+            <h3 class="font-bold text-2xl text-center text-[#000] leading-[233%]">Consultation</h3>
+            <span class="text-[16px] leading-[175%] text-[#7d7987] max-w-64"
+              >Free consultation with our trusted doctors and get the best recomendations</span
+            >
+          </div>
+          <div
+            class="flex flex-col items-center w-[375px] h-[354px] rounded-[20px] bg-[#fff] p-14 shadow-[rgba(7,_65,_210,_0.1)_0px_9px_30px] hover:shadow-[0_35px_60px_-15px_rgba(0,0,0,0.3)] mb-6 md:mb-0 md:transition-all cursor-pointer"
+          >
+            <img
+              src="./img/details_info.svg"
+              width="65"
+              height="90"
+              alt="Search doctor icon"
+              class="pb-5"
+            />
+            <h3 class="font-bold text-2xl text-center text-[#000] leading-[233%]">Details info</h3>
+            <span class="text-[16px] leading-[175%] text-[#7d7987] max-w-64"
+              >Free consultation with our trusted doctors and get the best recomendations</span
+            >
+          </div>
+          <div
+            class="flex flex-col items-center w-[375px] h-[354px] rounded-[20px] bg-[#fff] p-14 shadow-[rgba(7,_65,_210,_0.1)_0px_9px_30px] hover:shadow-[0_35px_60px_-15px_rgba(0,0,0,0.3)] mb-6 md:mb-0 md:transition-all cursor-pointer"
+          >
+            <img
+              src="./img/emergency.svg"
+              width="110"
+              height="90"
+              alt="Search doctor icon"
+              class="pb-5"
+            />
+            <h3 class="font-bold text-2xl text-center text-[#000] leading-[233%]">
+              Emergency care
+            </h3>
+            <span class="text-[16px] leading-[175%] text-[#7d7987] max-w-64"
+              >You can get 24/7 urgent care for yourself or your children and your lovely
+              family</span
+            >
+          </div>
+          <div
+            class="flex flex-col items-center w-[375px] h-[354px] rounded-[20px] bg-[#fff] p-14 shadow-[rgba(7,_65,_210,_0.1)_0px_9px_30px] hover:shadow-[0_35px_60px_-15px_rgba(0,0,0,0.3)] mb-6 md:mb-0 md:transition-all cursor-pointer"
+          >
+            <img
+              src="./img/tracking.svg"
+              width="63"
+              height="90"
+              alt="Search doctor icon"
+              class="pb-5"
+            />
+            <h3 class="font-bold text-2xl text-center text-[#000] leading-[233%]">Tracking</h3>
+            <span class="text-[16px] leading-[175%] text-[#7d7987] max-w-64"
+              >Track and save your medical <br />
+              history and health data
+            </span>
+          </div>
+        </div>
+        <div>
+          <a
+            class="block w-3/4 m-[auto] font-bold text-lg text-[#458ff6] hover:text-[#fff] leading-[290%] rounded-[55px] border border-[#458ff6] hover:bg-[#458ff6] md:w-[280px] h-14 text-center hover:shadow-lg hover:shadow-blue-500/50 md:transition-all"
+            href="#"
+            >Learn more</a
+          >
         </div>
       </section>
     </div>
