create roadmap section

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     />
     <title>Saviour Care</title>
   </head>
-  <body>
+  <body class="font-body">
     <header id="home" class="container mx-auto flex justify-between items-center pt-14 md:pt-24">
       <div>
         <a href="#" class="text-[#462E6A] text-xl md:text-2xl font-bold">Saviour Care</a>
@@ -137,7 +137,7 @@
               class="pb-5"
             />
             <h3 class="font-bold text-2xl text-center text-[#000] leading-[233%]">Search doctor</h3>
-            <span class="text-[16px] leading-[175%] text-[#7d7987] max-w-64"
+            <span class="text-[16px] leading-[175%] text-[#7d7987] max-w-64 font-light"
               >Choose your doctor from <br />
               thousands of specialist, general, <br />
               and trusted hospitals</span
@@ -156,7 +156,7 @@
             <h3 class="font-bold text-2xl text-center text-[#000] leading-[233%]">
               Online pharmacy
             </h3>
-            <span class="text-[16px] leading-[175%] text-[#7d7987] max-w-64"
+            <span class="text-[16px] leading-[175%] text-[#7d7987] max-w-64 font-light"
               >Buy your medicines with our <br />
               mobile application with a simple <br />
               delivery system</span
@@ -173,12 +173,12 @@
               class="pb-5"
             />
             <h3 class="font-bold text-2xl text-center text-[#000] leading-[233%]">Consultation</h3>
-            <span class="text-[16px] leading-[175%] text-[#7d7987] max-w-64"
+            <span class="text-[16px] leading-[175%] text-[#7d7987] max-w-64 font-light"
               >Free consultation with our trusted doctors and get the best recomendations</span
             >
           </div>
           <div
-            class="flex flex-col items-center w-[375px] h-[354px] rounded-[20px] bg-[#fff] p-14 shadow-[rgba(7,_65,_210,_0.1)_0px_9px_30px] hover:shadow-[0_35px_60px_-15px_rgba(0,0,0,0.3)] mb-6 md:mb-0 md:transition-all cursor-pointer"
+            class="flex flex-col items-center w-[375px] h-[354px] rounded-[20px] bg-[#fff] p-14 shadow-[rgba(7,_65,_210,_0.1)_0px_9px_30px] hover:shadow-[0_35px_60px_-15px_rgba(0,0,0,0.3)] md:transition-all mb-6 md:mb-5 cursor-pointer"
           >
             <img
               src="./img/details_info.svg"
@@ -188,12 +188,12 @@
               class="pb-5"
             />
             <h3 class="font-bold text-2xl text-center text-[#000] leading-[233%]">Details info</h3>
-            <span class="text-[16px] leading-[175%] text-[#7d7987] max-w-64"
+            <span class="text-[16px] leading-[175%] text-[#7d7987] max-w-64 font-light"
               >Free consultation with our trusted doctors and get the best recomendations</span
             >
           </div>
           <div
-            class="flex flex-col items-center w-[375px] h-[354px] rounded-[20px] bg-[#fff] p-14 shadow-[rgba(7,_65,_210,_0.1)_0px_9px_30px] hover:shadow-[0_35px_60px_-15px_rgba(0,0,0,0.3)] mb-6 md:mb-0 md:transition-all cursor-pointer"
+            class="flex flex-col items-center w-[375px] h-[354px] rounded-[20px] bg-[#fff] p-14 shadow-[rgba(7,_65,_210,_0.1)_0px_9px_30px] hover:shadow-[0_35px_60px_-15px_rgba(0,0,0,0.3)] md:transition-all mb-6 md:mb-5 cursor-pointer"
           >
             <img
               src="./img/emergency.svg"
@@ -205,13 +205,13 @@
             <h3 class="font-bold text-2xl text-center text-[#000] leading-[233%]">
               Emergency care
             </h3>
-            <span class="text-[16px] leading-[175%] text-[#7d7987] max-w-64"
+            <span class="text-[16px] leading-[175%] text-[#7d7987] max-w-64 font-light"
               >You can get 24/7 urgent care for yourself or your children and your lovely
               family</span
             >
           </div>
           <div
-            class="flex flex-col items-center w-[375px] h-[354px] rounded-[20px] bg-[#fff] p-14 shadow-[rgba(7,_65,_210,_0.1)_0px_9px_30px] hover:shadow-[0_35px_60px_-15px_rgba(0,0,0,0.3)] mb-6 md:mb-0 md:transition-all cursor-pointer"
+            class="flex flex-col items-center w-[375px] h-[354px] rounded-[20px] bg-[#fff] p-14 shadow-[rgba(7,_65,_210,_0.1)_0px_9px_30px] hover:shadow-[0_35px_60px_-15px_rgba(0,0,0,0.3)] md:transition-all mb-6 md:mb-5 cursor-pointer"
           >
             <img
               src="./img/tracking.svg"
@@ -221,7 +221,7 @@
               class="pb-5"
             />
             <h3 class="font-bold text-2xl text-center text-[#000] leading-[233%]">Tracking</h3>
-            <span class="text-[16px] leading-[175%] text-[#7d7987] max-w-64"
+            <span class="text-[16px] leading-[175%] text-[#7d7987] max-w-64 font-light"
               >Track and save your medical <br />
               history and health data
             </span>
@@ -229,13 +229,57 @@
         </div>
         <div>
           <a
-            class="block w-3/4 m-[auto] font-bold text-lg text-[#458ff6] hover:text-[#fff] leading-[290%] rounded-[55px] border border-[#458ff6] hover:bg-[#458ff6] md:w-[280px] h-14 text-center hover:shadow-lg hover:shadow-blue-500/50 md:transition-all"
+            class="block w-3/4 m-[auto] text-lg text-[#458ff6] hover:text-[#fff] leading-[290%] rounded-[55px] border border-[#458ff6] hover:bg-[#458ff6] md:w-[280px] h-14 text-center hover:shadow-lg hover:shadow-blue-500/50 md:transition-all"
             href="#"
             >Learn more</a
           >
         </div>
       </section>
     </div>
+    <section
+      class="container mx-auto flex flex-col items-center md:flex md:flex-row md:justify-between"
+    >
+      <div>
+        <img src="./img/illustration-01.png" alt="illustration" class="md:pt-[100px]" />
+      </div>
+      <div class="flex flex-col">
+        <h4 class="font-bold text-[#462e6a] text-4xl max-w-[464px] pb-[40px] md:pt-[155px]">
+          Leading healthcare providers
+        </h4>
+        <p class="font-light max-w-[434px] pb-[36px] text-[#7d7987] leading-[line-height: 167%]">
+          Trafalgar provides progressive, and affordable healthcare, accessible on mobile and online
+          for everyone. To us, it’s not just work. We take pride in the solutions we deliver
+        </p>
+        <a
+          class="border w-3/4 border-[#458ff6] m-[auto] md:m-0 text-lg rounded-[55px] hover:text-[#fff] hover:bg-[#458ff6] hover:shadow-lg hover:shadow-blue-500/50 md:transition-all block text-center leading-[290%] md:w-[218px] h-[56px]"
+          href="#"
+          >Learn more</a
+        >
+      </div>
+    </section>
+    <section
+      class="container mx-auto flex flex-col-reverse md:flex md:flex-row items-center pt-[100px] pb-[80px] md:pt-[224px] md:pb-[170px]"
+    >
+      <div>
+        <h4 class="font-bold text-[#462e6a] text-4xl max-w-[510px] pb-[50px]">
+          Download our Saviour Care mobile app
+        </h4>
+        <p
+          class="font-light max-w-[434px] pb-[36px] text-[#7d7987] leading-[line-height: 167%] pb-[40px]"
+        >
+          Our dedicated patient engagement app and web portal allow you to access information
+          instantaneously (no tedeous form, long calls, or administrative hassle) and securely
+        </p>
+        <a
+          class="border w-3/4 border-[#458ff6] m-[auto] md:m-0 text-lg rounded-[55px] hover:text-[#fff] hover:bg-[#458ff6] hover:shadow-lg hover:shadow-blue-500/50 md:transition-all block text-center leading-[290%] md:w-[218px] h-[56px]"
+          href="#"
+          >Download</a
+        >
+      </div>
+      <div>
+        <img src="./img/mobile-app-img.png" alt="" />
+      </div>
+    </section>
     <script src="index.js"></script>
   </body>
 </html>
