create footer & form

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
   <body class="font-body">
     <header id="home" class="container mx-auto flex justify-between items-center pt-14 md:pt-24">
       <div>
-        <a href="#" class="text-[#462E6A] text-xl md:text-2xl font-bold">Saviour Care</a>
+        <a href="#!" class="text-[#462E6A] text-xl md:text-2xl font-bold">Saviour Care</a>
       </div>
       <button id="burger-menu" class="block sm:hidden relative">
         <svg
@@ -36,16 +36,16 @@
       <div id="mobile-menu" class="hidden sm:hidden absolute top-24 right-5">
         <ul class="flex flex-col gap-4 bg-[#458ff6] rounded-xl p-7 shadow-lg shadow-blue-500/50">
           <li>
-            <a href="#" class="block text-white hover:underline text-base md:text-lg">Home</a>
+            <a href="#!" class="block text-white hover:underline text-base md:text-lg">Home</a>
           </li>
           <li>
-            <a href="#" class="block text-white hover:underline text-base md:text-lg">Services</a>
+            <a href="#!" class="block text-white hover:underline text-base md:text-lg">Services</a>
           </li>
           <li>
-            <a href="#" class="block text-white hover:underline text-base md:text-lg">Contacts</a>
+            <a href="#!" class="block text-white hover:underline text-base md:text-lg">Contacts</a>
           </li>
           <li>
-            <a href="#" class="block text-white hover:underline text-base md:text-lg">FAQ</a>
+            <a href="#!" class="block text-white hover:underline text-base md:text-lg">FAQ</a>
           </li>
         </ul>
       </div>
@@ -54,28 +54,28 @@
           <li class="w-20">
             <a
               class="text-[#1F1534] hover:text-[#2E4E92] hover:font-bold md:transition-all text-base md:text-lg"
-              href="#"
+              href="#!"
               >Home</a
             >
           </li>
           <li class="w-20">
             <a
               class="text-[#1F1534] hover:text-[#2E4E92] hover:font-bold md:transition-all text-base md:text-lg"
-              href="#"
+              href="#!"
               >Services</a
             >
           </li>
           <li class="w-20">
             <a
               class="text-[#1F1534] hover:text-[#2E4E92] hover:font-bold md:transition-all text-base md:text-lg"
-              href="#"
+              href="#!"
               >Contacts</a
             >
           </li>
           <li class="w-20">
             <a
               class="text-[#1F1534] hover:text-[#2E4E92] hover:font-bold md:transition-all text-base md:text-lg"
-              href="#"
+              href="#!"
               >FAQ</a
             >
           </li>
@@ -103,7 +103,7 @@
         <div
           class="w-full h-auto md:w-48 md:h-16 rounded-[55px] bg-[#458ff6] hover:bg-[#2b5a9c] md:transition-all text-center cursor-pointer"
         >
-          <a class="font-bold text-lg text-white leading-[316%]" href="#">Consult today</a>
+          <a class="font-bold text-lg text-white leading-[316%]" href="#!">Consult today</a>
         </div>
       </div>
       <div class="right-side pt-[50px] md:pt-[168px]">
@@ -230,7 +230,7 @@
         <div>
           <a
             class="block w-3/4 m-[auto] text-lg text-[#458ff6] hover:text-[#fff] leading-[290%] rounded-[55px] border border-[#458ff6] hover:bg-[#458ff6] md:w-[280px] h-14 text-center hover:shadow-lg hover:shadow-blue-500/50 md:transition-all"
-            href="#"
+            href="#!"
             >Learn more</a
           >
         </div>
@@ -252,7 +252,7 @@
         </p>
         <a
           class="border w-3/4 border-[#458ff6] m-[auto] md:m-0 text-lg rounded-[55px] hover:text-[#fff] hover:bg-[#458ff6] hover:shadow-lg hover:shadow-blue-500/50 md:transition-all block text-center leading-[290%] md:w-[218px] h-[56px]"
-          href="#"
+          href="#!"
           >Learn more</a
         >
       </div>
@@ -272,12 +272,109 @@
         </p>
         <a
           class="border w-3/4 border-[#458ff6] m-[auto] md:m-0 text-lg rounded-[55px] hover:text-[#fff] hover:bg-[#458ff6] hover:shadow-lg hover:shadow-blue-500/50 md:transition-all block text-center leading-[290%] md:w-[218px] h-[56px]"
-          href="#"
+          href="#!"
           >Download</a
         >
       </div>
       <div>
-        <img src="./img/mobile-app-img.png" alt="" />
+        <img src="./img/mobile-app-img.png" alt="mobile app img" />
+      </div>
+    </section>
+    <section
+      class="container mx-auto md:flex md:justify-between items-center pb-[120px] md:pt-[220px] md:pb-[230px] gap-14"
+    >
+      <div>
+        <img src="./img/doctor-img.png" alt="doctor img" />
+      </div>
+      <div>
+        <h4 class="font-bold text-[#462e6a] text-4xl max-w-[510px] pb-[30px]">
+          Find a Doctor near you
+        </h4>
+        <p
+          class="font-light max-w-[380px] pb-[36px] text-[#7d7987] leading-[line-height: 167%] pb-[78px]"
+        >
+          Our app and web portal allows you to find the doctor to your nearest location.
+        </p>
+        <a
+          class="border w-3/4 border-[#458ff6] m-[auto] md:m-0 text-lg rounded-[55px] hover:text-[#fff] hover:bg-[#458ff6] hover:shadow-lg hover:shadow-blue-500/50 md:transition-all block text-center leading-[290%] md:w-[218px] h-[56px]"
+          href="#!"
+          >Find now</a
+        >
+      </div>
+    </section>
+    <section
+      class="max-w-7xl m-[auto] w-full rounded-3xl mx-auto bg-[linear-gradient(223deg,_#6888c8_0%,_#5a98f2_100%)]"
+    >
+      <p class="text-bold text-white text-4xl leading-[133%] text-center pt-[90px] pb-24">
+        Sign up with us online
+      </p>
+      <form class="container mx-auto w-full max-w-lg">
+        <div class="flex items-center border-b-2 border-white py-4">
+          <input
+            class="appearance-none bg-transparent border-none w-full font-bold text-white placeholder-white text-2xl mr-3 py-1 px-5 leading-[150%] focus:outline-none"
+            type="text"
+            placeholder="name"
+            aria-label="Full name"
+          />
+        </div>
+        <div class="flex items-center border-b-2 border-white py-4">
+          <input
+            class="appearance-none bg-transparent border-none w-full font-bold text-white placeholder-white text-2xl mr-3 py-1 px-5 leading-[150%] focus:outline-none"
+            type="text"
+            placeholder="lastname"
+            aria-label="Full name"
+          />
+        </div>
+        <div class="flex items-center border-b-2 border-white py-4">
+          <input
+            class="appearance-none bg-transparent border-none w-full font-bold text-white placeholder-white text-2xl mr-3 py-1 px-5 leading-[150%] focus:outline-none"
+            type="email"
+            placeholder="email"
+            aria-label="Full name"
+          />
+        </div>
+        <div class="pt-14 pb-4">
+          <a
+            class="w-[510px] h-14 border m-[auto] font-bold text-white md:m-0 text-lg rounded-full hover:text-[#458ff6] hover:bg-[#fff] hover:shadow-sm hover:shadow-white md:transition-all block text-center leading-[290%]"
+            href="#!"
+            >Send</a
+          >
+        </div>
+      </form>
+    </section>
+    <section
+      class="mx-auto bg-[linear-gradient(212deg,_#6888c8_0%,_#5a98f2_100%)] mt-56 pt-[120px] pb-24"
+    >
+      <div class="flex flex-col md:flex-row gap-5 md:gap-[260px]">
+        <div class="px-4 md:pl-36">
+          <h5 class="font-bold text-white text-2xl pb-5">Saviour Care</h5>
+          <p
+            class="font-medium text-lg text-white leading-[150%] tracking-widest max-w-[440px] pb-8"
+          >
+            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget
+            dolor. Aenean massa.
+          </p>
+          <span class="font-light text-base text-white leading-[175%]"
+            >©AK PVT LTD 2021. All rights reserved</span
+          >
+        </div>
+        <div class="px-4 md:pl-36">
+          <span class="text-white font-bold leading-[300%] text-xl">Company</span>
+          <ul>
+            <li class="text-white leading-[210%] text-lg font-light">
+              <a href="#!">About</a>
+            </li>
+            <li class="text-white leading-[210%] text-lg font-light">
+              <a href="#!">Testimonials</a>
+            </li>
+            <li class="text-white leading-[210%] text-lg font-light">
+              <a href="#!">Find a doctor</a>
+            </li>
+            <li class="text-white leading-[210%] text-lg font-light">
+              <a href="#!">Apps</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </section>
     <script src="index.js"></script>
