fix: form section and footer

--- a/public/index.html
+++ b/public/index.html
@@ -303,53 +303,56 @@
       </div>
     </section>
     <section
-      class="max-w-7xl m-[auto] w-full rounded-3xl mx-auto bg-[linear-gradient(223deg,_#6888c8_0%,_#5a98f2_100%)]"
+      class="max-w-[1700px] m-[auto] rounded-3xl mx-auto bg-[linear-gradient(223deg,_#6888c8_0%,_#5a98f2_100%)]"
     >
-      <p class="text-bold text-white text-4xl leading-[133%] text-center pt-[90px] pb-24">
+      <p
+        class="text-bold text-white text-2xl md:text-4xl leading-[133%] text-center pt-[90px] pb-12 md:pb-24"
+      >
         Sign up with us online
       </p>
-      <form class="container mx-auto w-full max-w-lg">
-        <div class="flex items-center border-b-2 border-white py-4">
+      <form class="container mx-auto w-2/3 md:w-full md:max-w-lg">
+        <div class="flex items-center border-b md:border-b-2 border-white py-4">
           <input
-            class="appearance-none bg-transparent border-none w-full font-bold text-white placeholder-white text-2xl mr-3 py-1 px-5 leading-[150%] focus:outline-none"
+            class="appearance-none bg-transparent border-none w-full font-bold text-white placeholder-white text-lg md:text-2xl mr-3 py-1 px-5 leading-[150%] focus:outline-none"
             type="text"
             placeholder="name"
             aria-label="Full name"
           />
         </div>
-        <div class="flex items-center border-b-2 border-white py-4">
+        <div class="flex items-center border-b md:border-b-2 border-white py-4">
           <input
-            class="appearance-none bg-transparent border-none w-full font-bold text-white placeholder-white text-2xl mr-3 py-1 px-5 leading-[150%] focus:outline-none"
+            class="appearance-none bg-transparent border-none w-full font-bold text-white placeholder-white text-lg md:text-2xl mr-3 py-1 px-5 leading-[150%] focus:outline-none"
             type="text"
             placeholder="lastname"
             aria-label="Full name"
           />
         </div>
-        <div class="flex items-center border-b-2 border-white py-4">
+        <div class="flex items-center border-b md:border-b-2 border-white py-4">
           <input
-            class="appearance-none bg-transparent border-none w-full font-bold text-white placeholder-white text-2xl mr-3 py-1 px-5 leading-[150%] focus:outline-none"
+            class="appearance-none bg-transparent border-none w-full font-bold text-white placeholder-white text-lg md:text-2xl mr-3 py-1 px-5 leading-[150%] focus:outline-none"
             type="email"
             placeholder="email"
             aria-label="Full name"
           />
         </div>
-        <div class="pt-14 pb-4">
-          <a
-            class="w-[510px] h-14 border m-[auto] font-bold text-white md:m-0 text-lg rounded-full hover:text-[#458ff6] hover:bg-[#fff] hover:shadow-sm hover:shadow-white md:transition-all block text-center leading-[290%]"
-            href="#!"
-            >Send</a
+        <div class="pt-7 md:pt-14 pb-4">
+          <button
+            type="submit"
+            class="bg-transparent w-full h-12 mx-auto border-[1.4px] md:w-[510px] md:h-[56px] text-white text-center font-bold rounded-full hover:text-[#458ff6] hover:bg-[#fff] hover:shadow-lg hover:shadow-blue-500/50 md:transition-all"
           >
+            Send
+          </button>
         </div>
       </form>
     </section>
     <section
       class="mx-auto bg-[linear-gradient(212deg,_#6888c8_0%,_#5a98f2_100%)] mt-56 pt-[120px] pb-24"
     >
-      <div class="flex flex-col md:flex-row gap-5 md:gap-[260px]">
+      <div class="flex flex-col md:items-center md:flex-row md:pl- gap-0 lg:gap-[260px]">
         <div class="px-4 md:pl-36">
           <h5 class="font-bold text-white text-2xl pb-5">Saviour Care</h5>
           <p
-            class="font-medium text-lg text-white leading-[150%] tracking-widest max-w-[440px] pb-8"
+            class="font-medium text-base md:text-lg text-white leading-[150%] tracking-widest max-w-[440px] pb-8"
           >
             Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget
             dolor. Aenean massa.
@@ -358,7 +361,7 @@
             >©AK PVT LTD 2021. All rights reserved</span
           >
         </div>
-        <div class="px-4 md:pl-36">
+        <div class="px-4">
           <span class="text-white font-bold leading-[300%] text-xl">Company</span>
           <ul>
             <li class="text-white leading-[210%] text-lg font-light">
